# kg-guided-codegen

./: .gitignore  README.md  main.py  main_test_gen_agent.py  pyproject.toml  readme-agent.md  readme-agents.md  readme-equisa.md  validate_all_projects.sh  visualize_confidence.py
benchmarks/: dataset_loader.py  triage.py
notebooks/: agent_condensation_experiment.ipynb  bugsinpy_patches_with_hints.csv
program_analysis/: abstract_interpretation.py  algorithmic_debugger.py  demo.py  example.yml  file_utils.py
program_analysis/artifacts/: call_graph.json
src/: exp_bench.py  main.py  main_bugsinpy.py  main_condensation.py  main_testgen.py  test_generation_controller.py
src/agent/: README.md  graph.py  main.py  nodes.py  prompts.py  state.py  tools.py
src/benchmarks/: analyze_black_bug.py  compute_suspiciousness.py  dataset_loader.py  run_demo.py  run_experiment.py  run_project_benchmark.py  setup_bugsinpy_case.py  setup_bugsinpy_docker.py  simple_agent.py  swe_issue.py  swebench-desc.txt  test_all_bugsinpy.py  triage.py  validate_bugsinpy_project.py
src/docker_utils/: README.md  basic_container.py  demo.py  demo_swe.py
src/llm/: connector.py
src/program_analysis/: README.md  __init__.py  algorithmic_debugger.py  (+14 more)
tests/: test_bugsinpy_pipeline.py  test_bugsinpy_sandbox.py  test_dataset_loader.py  test_debugger_tools.py  test_import_all_modules.py  test_llm_connector.py  test_repo_call_graph.py  test_repo_indexer.py  test_simple_docker_sandbox.py  test_suspiciousness_controller.py  test_suspiciousness_controller_llm.py  test_triage.py  verify_generate_tests.py
(+14 files in other folders)
