[project]
name = "kg-guided-codegen"
version = "0.1.0"
description = "Knowledge graph guided code generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crosshair-tool>=0.0.97",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "python-call-graph>=2.1.6",
    "python-scalpel>=1.0b0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
