[project]
name = "kg-guided-codegen"
version = "0.1.0"
description = "Knowledge graph guided code generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crosshair-tool>=0.0.97",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "pydantic>=2.12.4",
    "python-call-graph>=2.1.6",
    "python-scalpel>=1.0b0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
    "docker>=7.0.0",
    "swebench>=4.1.0",
    "langchain>=1.1.2",
    "langgraph>=1.0.4",
    "langchain-ollama>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
]

[tool.pytest.ini_options]
addopts = "--maxfail=1 --cov=src"
testpaths = ["tests"]
pythonpath = ["src"]
